@@ -1,5 +1,5 @@
 /*
- * $Id: Changelog,v 1.447 2005-10-31 10:08:19 alkresin Exp $
+ * $Id: Changelog,v 1.448 2005-10-31 15:00:30 lculik Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-10-31 13:00 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com.br>
+   * source/commond.c
+     source/wprint.c
+     misc.c
+     ! optimized and removed the usage of hb_item_new macro
 
 2005-10-31 13:10 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
    * source/hfrmtmpl.prg
